src/components/PlayerStats/BatterContentGraphs/FilteredGraphs/GraphsHeader/GraphsHeader.module.scss
.graphsHeader {
  background-color: #fff;
  padding: 0.4375rem 0;
  position: sticky;
  top: -1px;
	z-index: 2;

	@media screen and (max-width: 800px) {
		z-index: 0;
		top: calc(var(--desktop-nav-height) + 132px + 58px);
  }

  > .header {
		color: #1a4c96;
		font: 700 1.125rem var(--font-nunito);
		text-align: center;
	
		@media screen and (orientation: landscape) and (max-height: 950px) {
			line-height: .8;
		}
	}
}

.title {
  padding: 0 0.5625rem;
  font: 700 0.875rem / 1.8 var(--font-nunito);
}

.highTitle {
	line-height: 3.8;
}

